--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -23,7 +23,7 @@
   	</p>
   	<!-- <hr> -->
 
-  	<div class="board">
+  	<div id="game-board" class="board">
   		<div class="card"></div>
   		<div class="card"></div>
   		<div class="card"></div>
