--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <nav class="clearfix">
-        <a href="#">Instr uctions</a>
+        <a href="#">Instructions</a>
         <a href="#">Game</a>
       </nav>
     </header>
@@ -19,17 +19,14 @@
     <h1>Memory Game</h1>
   	<h2>Instructions</h2>
   	<p>
-  		Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are         flipped face up over each turn. The object of the game is to turn over pairs of matching cards.
+  		Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are flipped face up over each turn. The object of the game is to turn over pairs of matching cards.
   	</p>
-  	<!-- <hr> -->
 
-  	<div id="game-board" class="board">
-  		<div class="card"></div>
-  		<div class="card"></div>
-  		<div class="card"></div>
-  		<div class="card"></div>
-  	</div>
-  
+  	<div id="outer">
+      <div id="game-board" class="board">
+      </div>
+    </div>
+    
     <footer>
       Created with &hearts; by <span class="name">GA</span>
     </footer>
